[package]
name = "kofina"
version = "0.0.1"
authors = ["shengurun <shengurun@gmail.com>"]
edition = "2018"
description = "Nothing to say anymore."

homepage = "https://github.com/cyanbell/kofina"
repository = "https://github.com/cyanbell/kofina"

readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
